refactor workspaces references across the old components
this PR refactors how we refer to workspaces so that we have a
consistent way of defining what should be preserved between components
and what is not needed. we are no longer tied to Tekton, our components
are dynamically translated and this PR is the first one that completely
breaks integration with Tekton.
the gist of the PR is that we are removing the workspaces sections and
the volume mounts from all components since they are not used and
forcing all components to use either a scratch workspace, which is a
temporary folder, or a source-code folder where the source code is
checked out by the git-clone component and then shared with other
components. this allows to have a more consistent and precise definition
of what each component requires, and the fact is that most of them just
require access to the checked out code, the results are fetched by
external subsystems.

--- a/components/consumers/arangodb/task.yaml
+++ b/components/consumers/arangodb/task.yaml
@@ -16,7 +16,7 @@ spec:
     image: '{{ default "ghcr.io/smithy-security/smithy" .Values.image.registry }}/components/consumers/arangodb:{{ .Chart.AppVersion }}'
     command: ["/app/components/consumers/arangodb/arangodb"]
     args: [
-      "-in", "$(workspaces.output.path)/.smithy/enrichers/",
+      "-in", "$(workspaces.scratch.path)/",
       "-db-url", "https://smithy.arangodb.svc:8529",
       "-db-name", "smithy",
       "-collection-name", "smithy",
