--- a/components/consumers/elasticsearch/task.yaml
+++ b/components/consumers/elasticsearch/task.yaml
@@ -33,7 +33,7 @@ spec:
       command: ["/app/components/consumers/elasticsearch/elasticsearch"]
       args:
         - -in
-        - "$(workspaces.output.path)/.smithy/enrichers/"
+        - "$(workspaces.scratch.path)/"
         - -descriptionTemplate
         - "$(params.consumer-elasticsearch-description-template)"
         - -esIndex
