--- a/components/enrichers/aggregator/task.yaml
+++ b/components/enrichers/aggregator/task.yaml
@@ -21,8 +21,8 @@ spec:
     command: ["/app/components/enrichers/aggregator/aggregator"]
     env:
     - name: READ_PATH
-      value: $(workspaces.output.path)/.smithy/enrichers
+      value: $(workspaces.scratch.path)
     - name: WRITE_PATH
-      value: "$(workspaces.output.path)/.smithy/enrichers"
+      value: "$(workspaces.scratch.path)"
     - name: B64_SIGNATURE_KEY
       value: "$(params.enricher-aggregator-b64-signature-key)"
