--- a/components/sources/dependency/task.yaml
+++ b/components/sources/dependency/task.yaml
@@ -27,4 +27,4 @@ spec:
       - "-purl"
       - "$(params.source-dependency-purl)"
       - "-outDir"
-      - "$(workspaces.output.path)"
+      - "$(workspaces.source-code.path)"
