--- a/pkg/components/testdata/producers/cdxgen/task.yaml
+++ b/pkg/components/testdata/producers/cdxgen/task.yaml
@@ -40,18 +40,11 @@ spec:
           value: $(params.producer-cdxgen-astgen-ignore-file-pattern)
         - name: ASTGEN_IGNORE_DIRS
           value: $(params.producer-cdxgen-astgen-ignore-dirs)
-      script: node /opt/cdxgen/bin/cdxgen.js -r -p -o /scratch/out.json $(workspaces.output.path)/ --spec-version 1.4
-      volumeMounts:
-        - mountPath: /scratch
-          name: scratch
-
+      script: node /opt/cdxgen/bin/cdxgen.js -r -p -o $(workspaces.scratch.path)/out.json $(workspaces.source-code.path)/ --spec-version 1.4
     - name: produce-issues
       imagePullPolicy: IfNotPresent
       image: '{{ default "ghcr.io/smithy-security/smithy" .Values.image.registry }}/components/producers/cdxgen:{{ .Chart.AppVersion }}'
       command: ["/app/components/producers/cdxgen/cdxgen-parser"]
       args:
-        - "-in=/scratch/out.json"
-        - "-out=$(workspaces.output.path)/.smithy/producers/cdxgen.pb"
-      volumeMounts:
-        - mountPath: /scratch
-          name: scratch
+        - "-in=$(workspaces.scratch.path)/out.json"
+        - "-out=$(workspaces.scratch.path)/cdxgen.pb"
