--- a/components/consumers/mongodb/task.yaml
+++ b/components/consumers/mongodb/task.yaml
@@ -26,7 +26,7 @@ spec:
     image: '{{ default "ghcr.io/smithy-security/smithy" .Values.image.registry }}/components/consumers/mongodb:{{ .Chart.AppVersion }}'
     command: ["/app/components/consumers/mongodb/mongodb"]
     args: [
-      "-in", "$(workspaces.output.path)/.smithy/enrichers/",
+      "-in", "$(workspaces.scratch.path)/",
       "-db-uri", "$(params.consumer-mongodb-db-uri)",
       "-db-name", "$(params.consumer-mongodb-db-name)",
       "-collection-name", "$(params.consumer-mongodb-collection-name)",
