--- a/components/enrichers/codeowners/task.yaml
+++ b/components/enrichers/codeowners/task.yaml
@@ -22,10 +22,10 @@ spec:
     command: ["/app/components/enrichers/codeowners/codeowners"]
     env:
     - name: READ_PATH
-      value: $(workspaces.output.path)/.smithy/producers
+      value: $(workspaces.scratch.path)
     - name: WRITE_PATH
-      value: "$(workspaces.output.path)/.smithy/enrichers/codeowners"
+      value: "$(workspaces.scratch.path)/codeowners"
     - name: REPO_BASE_PATH
-      value: "$(workspaces.output.path)/"
+      value: "$(workspaces.source-code.path)/"
     - name: ANNOTATION
       value: "$(params.enricher-codeowners-annotation)"
