--- a/components/enrichers/depsdev/task.yaml
+++ b/components/enrichers/depsdev/task.yaml
@@ -28,9 +28,9 @@ spec:
     command: ["/app/components/enrichers/depsdev/depsdev"]
     env:
     - name: READ_PATH
-      value: $(workspaces.output.path)/.smithy/producers
+      value: $(workspaces.scratch.path)
     - name: WRITE_PATH
-      value: "$(workspaces.output.path)/.smithy/enrichers/depsdev"
+      value: "$(workspaces.scratch.path)/depsdev"
     - name: LICENSES_IN_EVIDENCE
       value: "$(params.enricher-depsdev-licenses-in-evidence)"
     - name: ANNOTATION
