--- a/components/enrichers/policy/task.yaml
+++ b/components/enrichers/policy/task.yaml
@@ -39,9 +39,9 @@ spec:
     command: ["/app/components/enrichers/policy/policy"]
     env:
     - name: READ_PATH
-      value: $(workspaces.output.path)/.smithy/producers
+      value: $(workspaces.scratch.path)
     - name: WRITE_PATH
-      value: "$(workspaces.output.path)/.smithy/enrichers/policy"
+      value: "$(workspaces.scratch.path)/policy"
     - name: POLICY
       value: "$(params.enricher-policy-base64-policy)"
     - name: OPA_SERVER
