--- a/components/producers/checkov/task.yaml
+++ b/components/producers/checkov/task.yaml
@@ -13,12 +13,6 @@ spec:
   - name: producer-checkov-cyclonedx-target-override
     type: string
     default: ""
-  volumes:
-    - name: scratch
-      emptyDir: {}
-  workspaces:
-    - name: output
-      description: The workspace containing the source-code to scan.
   steps:
   - name: run-checkov
     image: bridgecrew/checkov:3.2.255
@@ -26,22 +20,16 @@ spec:
     args:
     - --skip-download
     - --directory
-    - "$(workspaces.output.path)/source-code"
+    - "$(workspaces.source-code.path)"
     - --output=cyclonedx_json
     - --output=sarif
     - --output-file-path
-    - /scratch    
+    - $(workspaces.scratch.path)    
     - --soft-fail
-    volumeMounts:
-    - mountPath: /scratch
-      name: scratch  
   - name: produce-issues
     imagePullPolicy: IfNotPresent
     image: '{{ default "ghcr.io/smithy-security/smithy" .Values.image.registry }}/components/producers/checkov:{{ .Chart.AppVersion }}'
     command: ["/app/components/producers/checkov/checkov-parser"]
     args:
-    - "-in=/scratch/results_sarif.sarif"
-    - "-out=$(workspaces.output.path)/.smithy/producers/checkov-sarif.pb"
-    volumeMounts:
-    - mountPath: /scratch
-      name: scratch
+    - "-in=$(workspaces.scratch.path)/results_sarif.sarif"
+    - "-out=$(workspaces.scratch.path)/checkov-sarif.pb"
