--- a/components/producers/snyk-python/task.yaml
+++ b/components/producers/snyk-python/task.yaml
@@ -37,12 +37,12 @@ spec:
       snyk auth $(params.producer-snyk-python-api-key)
       if [[ -n "$(params.producer-snyk-python-relative-path-to-requirements-txt)" ]]; then
         echo "installing dependencies"
-        pip install --force --no-deps --no-compile --no-warn-conflicts -r "$(workspaces.output.path)/source-code/$(params.producer-snyk-python-relative-path-to-requirements-txt)"
+        pip install --force --no-deps --no-compile --no-warn-conflicts -r "$(workspaces.source-code.path)/$(params.producer-snyk-python-relative-path-to-requirements-txt)"
       fi
 
       echo "running snyk test"
-      ls -lah $(workspaces.output.path)/source-code/
-      snyk test --prune-repeated-subdependencies --skip-unresolved --sarif-file-output=/scratch/snyk.out $(workspaces.output.path)/source-code/
+      ls -lah $(workspaces.source-code.path)/
+      snyk test --prune-repeated-subdependencies --skip-unresolved --sarif-file-output=$(workspaces.scratch.path)/snyk.out $(workspaces.source-code.path)/
       exitCode=$?
       if [[ $exitCode -ne 0 && $exitCode -ne 1 ]]; then
         echo "Snyk failed with exit code $exitCode"
@@ -50,18 +50,11 @@ spec:
       else
         echo "Snyk completed successfully! exitcode $exitCode"
       fi
-    volumeMounts:
-    - mountPath: /scratch
-      name: scratch
-
   - name: produce-issues
     imagePullPolicy: IfNotPresent
     image: '{{ default "ghcr.io/smithy-security/smithy" .Values.image.registry }}/components/producers/snyk-docker:{{ .Chart.AppVersion }}'
     command: ["/app/components/producers/snyk-docker/snyk-docker-parser"]
     args:
-    - "-in=/scratch/snyk.out"
-    - "-out=$(workspaces.output.path)/.smithy/producers/snyk.pb"
+    - "-in=$(workspaces.scratch.path)/snyk.out"
+    - "-out=$(workspaces.scratch.path)/snyk.pb"
     - "-language=python"
-    volumeMounts:
-    - mountPath: /scratch
-      name: scratch
